--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    
   </head>
   <body>
     <noscript>
